# mirador-service-python

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .importlinter  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.fr.md  README.md  SECURITY.md  TASKS.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  renovate.json  sonar-project.properties
.config/: lefthook.yml
.gitlab-ci/: build.yml  deploy.yml  docs.yml  lint.yml  quality.yml  test.yml
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: default.md
alembic/: env.py
alembic/versions/: 2026_04_25_0001_initial_schema.py  2026_04_26_0002_create_product.py  2026_04_26_0003_create_orders.py  2026_04_26_0004_create_order_line.py
deploy/kubernetes/observability-prom/: mirador-py-slo.yaml
docs/: ALEMBIC.md  index.md
docs/adr/: 0001-python-stack-choice.md  0002-auth-jwt-with-rotation.md  0003-observability-stack.md  0004-kafka-request-reply-pattern.md  0005-pydantic-settings-hierarchy.md  0006-structlog-over-stdlib.md  0007-industrial-python-best-practices.md  0008-async-first-architecture.md  0009-uv-as-package-manager.md  0010-sqlalchemy-async-over-alternatives.md  0011-hypothesis-property-based-testing.md  0012-slo-as-code-via-sloth.md  0013-stability-check-six-section-design.md  0014-coverage-floor-and-property-based-testing.md  README.md
docs/architecture/: adrs.md  overview.md
docs/ml/: churn-prediction.md
docs/reference/: app.md  auth.md  customer.md  integration.md  messaging.md  middleware.md  observability.md
docs/runbooks/: slo-availability.md  slo-enrichment.md  slo-latency.md
docs/slo/: chaos-demo.md  review-cadence.md  sla.md  slo.yaml  wrap-as-prometheusrule.py
infra/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  poddisruptionbudget.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
infra/observability/grafana-dashboards/: apdex.json  latency-heatmap.json  slo-breakdown-by-endpoint.json
src/mirador_service/: __init__.py  app.py
src/mirador_service/api/: actuator.py  quality.py
src/mirador_service/auth/: api_key.py  cleanup.py  deps.py  dtos.py  jwt.py  models.py  passwords.py  router.py
src/mirador_service/config/: __init__.py  settings.py
src/mirador_service/customer/: audit_router.py  diagnostic_router.py  dtos.py  enrichment_router.py  models.py  recent_buffer.py  repository.py  router.py
src/mirador_service/db/: base.py
src/mirador_service/integration/: bio_service.py  redis_client.py  todo_service.py
src/mirador_service/mcp/: __init__.py  actuator.py  audit.py  auth.py  dtos.py  metrics_registry.py  mount.py  ring_buffer.py  tools.py
src/mirador_service/messaging/: customer_event.py  dtos.py  enrichment.py  kafka_client.py
src/mirador_service/middleware/: __init__.py  logging.py  request_id.py  setup.py
src/mirador_service/ml/: __init__.py  dtos.py  feature_engineering.py  inference.py  model.py  predictor_singleton.py  risk_band.py  router.py  seed_demo_data.py  train_churn.py
src/mirador_service/observability/: otel.py
src/mirador_service/order/: __init__.py  dtos.py  models.py  order_line_models.py  order_line_router.py  repository.py  router.py  totals.py
src/mirador_service/product/: __init__.py  dtos.py  models.py  repository.py  router.py
tests/: conftest.py
tests/benchmarks/: test_hot_paths.py
tests/integration/: conftest.py  test_api_key_e2e.py  test_kafka_client_lifecycle.py  test_kafka_round_trip.py  test_mcp_auth.py  test_mcp_server.py  test_order_cascade.py  test_repository_postgres.py
tests/ml/: conftest.py  test_dtos.py  test_features.py  test_inference.py  test_model.py  test_onnx_export.py  test_risk_band.py
tests/unit/: test_actuator.py  test_alembic_migration.py  test_app_smoke.py  test_coverage_uplift.py  test_property_based.py  test_quality.py
tests/unit/auth/: test_api_key_middleware.py  test_auth_router.py  test_cleanup.py  test_deps.py  test_jwt.py  test_me.py  test_passwords.py
tests/unit/customer/: test_audit_router.py  test_customer_router.py  test_diagnostic_router.py  test_recent_buffer.py  test_repository.py
tests/unit/integration/: test_bio_service.py  test_todo_service.py
tests/unit/mcp/: conftest.py  test_actuator.py  test_audit.py  test_auth.py  test_dtos.py  test_metrics_registry.py  test_mount.py  test_ring_buffer.py  test_tools.py
tests/unit/messaging/: test_enrichment.py  test_enrichment_router.py  test_kafka_client.py
tests/unit/ml/: test_router_churn.py
tests/unit/observability/: test_otel.py
tests/unit/order/: test_order_invariants_property.py  test_order_line_router.py  test_order_line_status_update.py  test_order_router.py
tests/unit/product/: test_product_orders_router.py  test_product_router.py
